[gd_scene load_steps=3 format=3 uid="uid://dy1jlyppesfcx"]

[ext_resource type="Script" uid="uid://ccwhc2llerb0i" path="res://entities/projectiles/projectile_base.gd" id="1_heyrr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7k33p"]

[node name="ProjectileBase" type="Area2D"]
collision_layer = 8
collision_mask = 4
script = ExtResource("1_heyrr")

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7k33p")

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1

[node name="VisibleOnScreenNotifier" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier" to="." method="_on_visible_on_screen_notifier_screen_exited"]
